--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "pm2-runtime start ecosystem.config.js --env production",
+    "start": "node app/serve.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
