--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node app/serve.js",
+    "dev": "nodemon --legacy-watch app/serve.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -19,7 +20,7 @@
     "sequelize": "^5.21.2"
   },
   "devDependencies": {
-    "nodemon": "^1.19.4",
+    "nodemon": "^1.18.2",
     "sequelize-cli": "^5.5.1"
   }
 }
